--- a/game/src/core/CMakeLists.txt
+++ b/game/src/core/CMakeLists.txt
@@ -3,7 +3,13 @@ project(core)
 file(GLOB SOURCES *.cc)
 file(GLOB HEADERS *.h)
 
-add_library(core SHARED ${SOURCES} ${HEADERS})
+if(WIN32)
+    set(MENGDE_LIB_TYPE STATIC)
+else()
+    set(MENGDE_LIB_TYPE SHARED)
+endif()
+
+add_library(core ${MENGDE_LIB_TYPE} ${SOURCES} ${HEADERS})
 
 target_include_directories(core SYSTEM PUBLIC ${LUA_INCLUDE_DIR} ${FLATBUFFERS_INCLUDE_DIR})
 target_link_libraries(core util)
